--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -2132,6 +2132,10 @@ definitions:
       workspaceId:
         type: integer
         format: int64
+      workspaceNamespace:
+        type: string
+      workspaceFirecloudName:
+        type: string
       permission:
         type: string
       cohort:
