--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -569,6 +569,19 @@ paths:
           description: User Not Found
         500:
           description: Internal Server Error
+  # CDR versions #########################################################################
+
+  /v1/cdrVersions:
+    get:
+      tags:
+        - cdrVersions
+      description: Returns all curated data repository (CDR) versions that the user has access to
+      operationId: getCdrVersions
+      responses:
+        200:
+          description: A list of CDR versions.
+          schema:
+            $ref: "#/definitions/CdrVersionListResponse"
 
   # Workspaces ###########################################################################
 
@@ -1252,6 +1265,40 @@ definitions:
       firstVisit:
         type: integer
         format: int64
+
+  CdrVersionListResponse:
+    type: object
+    required:
+      - items
+      - defaultCdrVersionId
+    properties:
+      items:
+        type: "array"
+        items:
+          $ref: "#/definitions/CdrVersion"
+      defaultCdrVersionId:
+        type: "string"
+        description: ID of the CDR versions that should be used by the user by default
+
+  CdrVersion:
+    type: object
+    required:
+      - cdrVersionId
+      - name
+      - dataAccessLevel
+      - creationTime
+    properties:
+      cdrVersionId:
+        type: string
+      name:
+        type: string
+      dataAccessLevel:
+        $ref: "#/definitions/DataAccessLevel"
+      creationTime:
+        type: integer
+        format: int64
+        description: Milliseconds since the UNIX epoch.
+
 
   WorkspaceListResponse:
     type: object
