--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -115,19 +115,6 @@ services:
       command: wait-for db:3306 -- ./generate-cdr/init-new-cdr-db.sh --cdr-db-name public --run-list data --context local
       env_file:
         - db-cdr/vars.env
-  db-data-migration:
-    depends_on:
-      - db
-    build:
-      context: ./src/dev/server
-    user: ${UID}
-    working_dir: /w/db
-    volumes:
-      - gradle-cache:/.gradle
-      - .:/w:cached
-    command: wait-for db:3306 -- ./run-migrations.sh data local
-    env_file:
-      - db/vars.env
   db-generate-cdr-counts:
     depends_on:
       - db
@@ -280,6 +267,19 @@ services:
     entrypoint: wait-for db:3306 -- ./gradlew :tools:loadConfig
     env_file:
       - db/vars.env
+  update-cdr-versions:
+      depends_on:
+        - db
+      build:
+       context: ./src/dev/server
+      user: ${UID}
+      working_dir: /w/api
+      volumes:
+        - ..:/w:cached
+        - gradle-cache:/.gradle
+      entrypoint: wait-for db:3306 -- ./gradlew :tools:updateCdrVersions "-PappArgs=['/w/api/config/cdr_versions_nonprod.json',false]"
+      env_file:
+        - db/vars.env
 volumes:
   db:
   gradle-cache:
