Trying to split build

--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -123,6 +123,7 @@ sourceSets {
   }
 }
 
+compileJava.dependsOn ':common-api:generateCommonApi'
 compileJava.dependsOn ':generateApi'
 compileJava.dependsOn ':generateNotebooksClient'
 
