--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -73,7 +73,7 @@ sourceSets {
   main {
     java {
       srcDirs = ['src/main/java', '../src/main/java', '../src/generated/java',
-                 '../../common-api/src/main/java', '../../common-api/src/generated/java']
+                 '../../common-api/src/main/java']
       includes = ['org/pmiops/workbench/tools/**/*.java',
                   'org/pmiops/workbench/db/**/*.java',
                   'org/pmiops/workbench/notebooks/**/*.java',
