--- a/public-api/src/main/webapp/WEB-INF/appengine-web.xml.template
+++ b/public-api/src/main/webapp/WEB-INF/appengine-web.xml.template
@@ -1,5 +1,5 @@
 <appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
-  <service>public-api</service>
+  <service>api</service>
   <runtime>java8</runtime>
   <threadsafe>true</threadsafe>
   <!-- Deploy complains about this tag, bug BigQuery needs it. -->
