--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -210,7 +210,7 @@ paths:
       tags:
         - cohortBuilder
       description: Searches for demographic info about subjects.
-      operationId: "getChartInfo"
+      operationId: "getDemoChartInfo"
       parameters:
         - in: body
           name: request
@@ -222,7 +222,7 @@ paths:
         200:
           description: A collection of criteria
           schema:
-            $ref: "#/definitions/ChartInfoListResponse"
+            $ref: "#/definitions/DemoChartInfoListResponse"
 
   /v1/cohortbuilder/{cdrVersionId}/quicksearch/{type}/{value}:
     parameters:
@@ -595,7 +595,7 @@ definitions:
       description: possible subtypes of trees
       enum: [CM, PROC, ICD10CM, ICD10PCS, CPT4, AGE, DEC, GEN, RACE, ETH, BP, HR, HR-DETAIL, HEIGHT, WEIGHT, BMI, WC, HC, PREG, WHEEL, ATC, BRAND, CLIN, LAB]
 
-  ChartInfoListResponse:
+  DemoChartInfoListResponse:
     type: object
     required:
       - items
@@ -603,9 +603,9 @@ definitions:
       items:
         type: "array"
         items:
-          $ref: "#/definitions/ChartInfo"
+          $ref: "#/definitions/DemoChartInfo"
 
-  ChartInfo:
+  DemoChartInfo:
     type: object
     required:
       - gender
