[DB-29] Start moving CDR version stuff into common-api. [risk=low] (#1192)
* Moving CDR version stuff to common api

* Gradle

* Stuff

* Trying to split build

* Moar fixes

* Moar changes

* Moving grant permissions to separate file

* Test fixes

* PR comments, test fix

* Adding common-api test

* Removed DataAccessLevel test

* Moving CDR version stuff to common api

* Gradle

* Stuff

* Trying to split build

* Moar fixes

* Moar changes

* Moving grant permissions to separate file

* PR comments, test fix

* public-api fixes

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /api/src/main/webapp/WEB-INF/gsuite-admin-sa.json
 /api/src/generated
 /api/tools/build/*
+/common-api/.swagger-codegen/*
+/common-api/src/generated
 /ui/package-lock.json
 /ui/coverage
 /ui/**/*.js
@@ -51,7 +53,10 @@ public-api/wrapper
 public-api/.swagger-codegen/*
 public-api/src/generated/
 public-api/src/main/webapp/WEB-INF/appengine-web.xml
-
+public-api/src/main/resources/merged.yaml
+public-api/gradle
+public-api/gradlew
+public-api/gradlew.bat
 **/.idea
 **/*.iml
 **/*.ipr
