--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -115,6 +115,24 @@ services:
       command: wait-for db:3306 -- ./generate-cdr/init-new-cdr-db.sh --cdr-db-name public --run-list data --context local
       env_file:
         - db-cdr/vars.env
+  db-make-bq-denormalized-tables:
+      depends_on:
+        - db
+      build:
+        context: ./src/dev/server
+      user: ${UID}
+      working_dir: /w/db-cdr
+      volumes:
+        - gradle-cache:/.gradle
+        - .:/w:cached
+        - ~/.config:/.config:cached
+        - ~/.gsutil:/.gsutil:cached
+
+      entrypoint: ["./generate-cdr/make-bq-denormalized-tables.sh"]
+      environment:
+        - GOOGLE_APPLICATION_CREDENTIALS=/w/sa-key.json
+      env_file:
+        - db-cdr/vars.env
   db-generate-cdr-counts:
     depends_on:
       - db
@@ -133,6 +151,24 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=/w/sa-key.json
     env_file:
       - db-cdr/vars.env
+  db-generate-cloudsql-db:
+      depends_on:
+        - db
+      build:
+        context: ./src/dev/server
+      user: ${UID}
+      working_dir: /w/db-cdr
+      volumes:
+        - gradle-cache:/.gradle
+        - .:/w:cached
+        - ~/.config:/.config:cached
+        - ~/.gsutil:/.gsutil:cached
+
+      entrypoint: ["./generate-cdr/generate-cloudsql-db.sh"]
+      environment:
+        - GOOGLE_APPLICATION_CREDENTIALS=/w/sa-key.json
+      env_file:
+        - db-cdr/vars.env
   db-generate-local-cdr-db:
     depends_on:
       - db
