--- a/public-ui/app.yaml
+++ b/public-ui/app.yaml
@@ -8,10 +8,15 @@ handlers:
   static_files: dist/\1
   upload: dist/(.*)
   secure: always
+  # TODO(calbach): Bump max-age to 1y once we've verified this is correct.
+  http_headers:
+    Strict-Transport-Security: "max-age=86400; includeSubDomains; preload"
 - url: /.*
   static_files: dist/index.html
   upload: dist/index.html
   secure: always
+  http_headers:
+    Strict-Transport-Security: "max-age=86400; includeSubDomains; preload"
 
 # If a file (relative path under public-ui/) matches this regex, do not upload it.
 # Skip everything not starting with "dist".
