--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,6 @@
 import io.swagger.codegen.config.CodegenConfigurator
 import io.swagger.codegen.DefaultGenerator
-import org.pmiops.workbench.build.GenerateAPIListingTask
+import org.pmiops.workbench.tooling.GenerateAPIListingTask
 
 def swaggerTemplateDir = 'src/main/resources'
 def mergedApiSourceFile = 'src/main/resources/merged.yaml'
