--- a/public-ui/package.json
+++ b/public-ui/package.json
@@ -9,8 +9,8 @@
     "test": "ng test --sourcemaps=false",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e",
-    "codegen": "yarn run codegen-clean && yarn run public-codegen-swagger && yarn run public-post-codegen",
-    "merge-swagger": "../api/build.rb merge-yaml",
+    "codegen": "yarn run merge-swagger && yarn run codegen-clean && yarn run public-codegen-swagger && yarn run public-post-codegen",
+    "merge-swagger": "../public-api/build.rb merge-yaml",
     "codegen-clean": "rm -rf src/generated src/publicGenerated",
     "post-codegen": "sed -i.bak -e 's/OpaqueToken/InjectionToken/' src/generated/variables.ts",
     "public-codegen-swagger": "java -jar ../aou-utils/swagger-codegen-cli.jar generate --lang typescript-angular --input-spec ../public-api/src/main/resources/merged.yaml --output src/publicGenerated --additional-properties ngVersion=2",
