[RW-1276] DomainInfo / SurveyModule /etc. (#1211)
* Start of API for getting domain info in workbench

* Tests, etc.

* Re added distinct when there's a join to concept_synonym.

* Fixes

* Adding DomainInfo (to replace DbDomain); adding SurveyModulesConfig (to replace PPI modules represented in DbDomain).

* Adding domain_info.csv, domain_to_domain_id.csv

* Updates

* Changes

* Fixes

* Test fixes

* Fixes

* Fixes. Removing public-api generation from api (unused)

* Changing param names, doc

* De-lint

* Starting to mess with scripts

* More tweaks

* More stuff

* Setting domain_info counts

* Adding 0 columns

* Removing method after merge

* Add missing import

* Fixing typos

* Script fixes

* Fix`

* Fixing quotes

* PR comments

* CSV changes

* other file

* Schema change

* Fixing sql typo

* Fixing question count SQL to use achilles_results.

Updating counts in local CSV

* Updating cdr version config

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1164,6 +1164,25 @@ paths:
           schema:
             $ref: "#/definitions/ConceptSet"
 
+# Concepts ###############################################################################
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/domainInfo:
+      get:
+        tags:
+          - concepts
+        description: >
+          Returns information on the domains of data in the workspace's CDR version along
+          with participant and concept counts
+        operationId: "getDomainInfo"
+        parameters:
+          - $ref: '#/parameters/workspaceNamespace'
+          - $ref: '#/parameters/workspaceId'
+        responses:
+          200:
+            description: information on the domains
+            schema:
+              $ref: "#/definitions/DomainInfoResponse"
+
 ##########################################################################################
 ## DEFINITIONS
 ##########################################################################################
@@ -1745,6 +1764,16 @@ definitions:
         items:
           type: integer
           format: int64
+
+  DomainInfoResponse:
+    type: object
+    required:
+      - items
+    properties:
+      items:
+        type: "array"
+        items:
+          $ref: "#/definitions/DomainInfo"
 
 
   CreateAccountRequest:
